menu fixer pour meilleur visibilité

--- a/src/containers/Menu/style.scss
+++ b/src/containers/Menu/style.scss
@@ -1,5 +1,14 @@
 @import "src/colors.scss";
 
+.fixed-menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #fff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
 header {
   height: 112px;
 }
